// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ReviewPage with votes 1`] = `
.c12 {
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  background: rgb(211,211,211);
  cursor: pointer;
  padding: 0.75rem 1rem;
  line-height: 1.25;
  color: black;
  touch-action: manipulation;
}

.c3 {
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  background: rgb(211,211,211);
  width: 100%;
  padding: 0.75rem 1rem;
  line-height: 1.25;
  color: rgb(169,169,169);
  touch-action: manipulation;
}

.c8 {
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  background: rgb(211,211,211);
  cursor: pointer;
  padding: 0.75rem 1rem;
  line-height: 1.25;
  color: black;
  touch-action: manipulation;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  width: 100%;
  max-width: 66ch;
  line-height: 1.2;
}

.c2 h1 {
  margin: 2rem 0 1rem;
  line-height: 1.1;
  font-size: 1.5rem;
}

.c2 h2 {
  margin: 1.5rem 0 0.75rem;
  font-size: 1.25rem;
}

.c2 h3,
.c2 p {
  margin-top: 1rem;
  margin-bottom: 1rem;
  font-size: 1rem;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p {
  margin-top: -0.75rem;
}

.c2 h3 + p {
  margin-top: -1rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c2 dl {
  margin: 1rem 0;
}

.c13 {
  color: darkorange;
  font-weight: 600;
  word-break: break-word;
}

.c13::before {
  display: inline-block;
  margin-top: -0.3rem;
  margin-right: 0.25rem;
  border-radius: 50%;
  background: darkorange;
  width: 1rem;
  height: 1rem;
  vertical-align: middle;
  text-align: center;
  line-height: 1.1;
  color: #ffffff;
  font-size: 90%;
  font-weight: 800;
  content: '!';
}

.c10 {
  word-break: break-word;
}

.c10::before {
  display: inline-block;
  margin-top: -0.3rem;
  margin-right: 0.25rem;
  background: #028099;
  width: 1rem;
  height: 1rem;
  vertical-align: middle;
  text-align: center;
  line-height: 1.1;
  color: #ffffff;
  font-size: 90%;
  font-weight: 800;
  content: '✓';
}

.c1 {
  margin: 0 auto;
  width: 100%;
  max-width: 35rem;
  padding: 0.5rem 0.5rem;
}

.c14 {
  margin: 0 auto;
  width: 100%;
  max-width: 35rem;
  padding: 0.5rem 0.5rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  overflow: auto;
}

.c4::before,
.c4::after {
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 0.25rem;
  content: '';
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
}

.c4::before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c4::after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c6 {
  margin: 0 auto;
  width: 100%;
  max-width: 35rem;
  padding: 0.5rem 0.5rem 1rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0.75rem;
  border-radius: 0.125rem;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  background: #ffffff;
  width: 100%;
  padding: 0.375rem 0.5rem;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  white-space: normal;
  color: inherit;
}

button.c7 {
  cursor: pointer;
  text-align: left;
}

.c7:last-child {
  margin-bottom: 0;
}

.c9 {
  width: 100%;
  max-width: 66ch;
  line-height: 1.2;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 h1 {
  margin: 2rem 0 1rem;
  line-height: 1.1;
  font-size: 1.5rem;
}

.c9 h2 {
  margin: 1.5rem 0 0.75rem;
  font-size: 1.25rem;
}

.c9 h3,
.c9 p {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 1rem;
}

.c9 h1 + h2 {
  margin-top: -0.75rem;
}

.c9 h1 + p,
.c9 h2 + p {
  margin-top: -0.75rem;
}

.c9 h3 + p {
  margin-top: 0;
}

.c9 > :first-child {
  margin-top: 0;
}

.c9 > :last-child {
  margin-bottom: 0;
}

.c9 dl {
  margin: 1rem 0;
}

.c9 > h3 {
  font-weight: 400;
}

.c11 {
  display: none;
  padding-left: 2rem;
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

@media print {
  .c13 {
    color: black;
  }
}

@media (min-width:768px) {
  .c1 {
    padding: 0.5rem 1rem;
  }
}

@media (min-width:768px) {
  .c14 {
    padding: 0.5rem 1rem;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-right: 1rem;
    padding-left: 1rem;
  }
}

@media (min-width:480px) {
  .c7 {
    padding: 0.75rem 1rem;
  }
}

@media (min-width:480px) {
  .c9 {
    line-height: 1.3;
  }
}

@media (min-width:480px) {
  .c11 {
    display: block;
  }
}

<main
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
      id="audiofocus"
    >
      <h1
        aria-label="Review your ballot selections. Use the down arrow to go through all contests. Use the select button to change a particular contest. When you are done reviewing, use the right arrow to continue."
      >
        Review Your Ballot Selections
      </h1>
      <button
        aria-hidden="true"
        class="c3"
        data-direction="up"
        disabled=""
        type="button"
      >
        ↑ See More
      </button>
    </div>
  </div>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <button
          class="c7 c8"
          id="contest-president"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="President and Vice-President,"
            >
              United States
              , 
              President and Vice-President
            </h3>
            <p
              aria-label="Joseph Barchi and Joseph Hallaren, Federalist."
              class="c10"
            >
              <strong>
                Joseph Barchi and Joseph Hallaren
              </strong>
               
              / Federalist
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-senator"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Senator,"
            >
              United States
              , 
              Senator
            </h3>
            <p
              aria-label="Dennis Weiford, Federalist."
              class="c10"
            >
              <strong>
                Dennis Weiford
              </strong>
               
              / Federalist
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-representative-district-6"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Representative District 6,"
            >
              United States
              , 
              Representative, District 6
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-governor"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Governor,"
            >
              State of Hamilton
              , 
              Governor
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-lieutenant-governor"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Lieutenant Governor,"
            >
              State of Hamilton
              , 
              Lieutenant Governor
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-secretary-of-state"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Secretary of State,"
            >
              State of Hamilton
              , 
              Secretary of State
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-state-senator-district-31"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Senator District 31,"
            >
              State of Hamilton
              , 
              Senator, District 31
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-state-assembly-district-54"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Assembly Member District 54,"
            >
              State of Hamilton
              , 
              Assembly Member, District 54
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-county-commissioners"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="County Commissioners,"
            >
              Franklin County
              , 
              County Commissioners
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-county-registrar-of-wills"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Registrar of Wills,"
            >
              Franklin County
              , 
              Registrar of Wills
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-city-mayor"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Mayor,"
            >
              City of Springfield
              , 
              Mayor
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-city-council"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="City Council,"
            >
              City of Springfield
              , 
              City Council
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-judicial-robert-demergue"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Retain Robert Demergue as Chief Justice?,"
            >
              Hamilton Court of Appeals
              , 
              Retain Robert Demergue as Chief Justice?
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-judicial-elmer-hull"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Retain Elmer Hull as Associate Justice?,"
            >
              Hamilton Court of Appeals
              , 
              Retain Elmer Hull as Associate Justice?
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-question-a"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Question A: Recovery of Property Damages,"
            >
              State of Hamilton
              , 
              Question A: Recovery of Property Damages
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-question-b"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Question B: Separation of Powers,"
            >
              State of Hamilton
              , 
              Question B: Separation of Powers
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-question-c"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Question C: Limits to Damages for Non-Economic Loss,"
            >
              State of Hamilton
              , 
              Question C: Limits to Damages for Non-Economic Loss
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-proposition-1"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Proposition 1: Gambling in Franklin and Fromwit Counties,"
            >
              State of Hamilton
              , 
              Proposition 1: Gambling in Franklin and Fromwit Counties
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-measure-101"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Measure 101: College District,"
            >
              Franklin County
              , 
              Measure 101: College District
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-102"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Measure 102: Vehicle Abatement Program,"
            >
              Franklin County
              , 
              Measure 102: Vehicle Abatement Program
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-measure-666"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Measure 666: The Question No One Gets To,"
            >
              Franklin County
              , 
              Measure 666: The Question No One Gets To
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-primary-constitution-head-of-party"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Head of Constitution Party,"
            >
              Franklin County
              , 
              Head of Constitution Party
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c13"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    class="c14"
  >
    <button
      aria-hidden="true"
      class="c3"
      data-direction="down"
      disabled=""
      type="button"
    >
      ↓ See More
    </button>
  </div>
</main>
`;

exports[`renders ReviewPage without votes 1`] = `
.c12 {
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  background: rgb(211,211,211);
  cursor: pointer;
  padding: 0.75rem 1rem;
  line-height: 1.25;
  color: black;
  touch-action: manipulation;
}

.c3 {
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  background: rgb(211,211,211);
  width: 100%;
  padding: 0.75rem 1rem;
  line-height: 1.25;
  color: rgb(169,169,169);
  touch-action: manipulation;
}

.c8 {
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  background: rgb(211,211,211);
  cursor: pointer;
  padding: 0.75rem 1rem;
  line-height: 1.25;
  color: black;
  touch-action: manipulation;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  width: 100%;
  max-width: 66ch;
  line-height: 1.2;
}

.c2 h1 {
  margin: 2rem 0 1rem;
  line-height: 1.1;
  font-size: 1.5rem;
}

.c2 h2 {
  margin: 1.5rem 0 0.75rem;
  font-size: 1.25rem;
}

.c2 h3,
.c2 p {
  margin-top: 1rem;
  margin-bottom: 1rem;
  font-size: 1rem;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p {
  margin-top: -0.75rem;
}

.c2 h3 + p {
  margin-top: -1rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c2 dl {
  margin: 1rem 0;
}

.c10 {
  color: darkorange;
  font-weight: 600;
  word-break: break-word;
}

.c10::before {
  display: inline-block;
  margin-top: -0.3rem;
  margin-right: 0.25rem;
  border-radius: 50%;
  background: darkorange;
  width: 1rem;
  height: 1rem;
  vertical-align: middle;
  text-align: center;
  line-height: 1.1;
  color: #ffffff;
  font-size: 90%;
  font-weight: 800;
  content: '!';
}

.c1 {
  margin: 0 auto;
  width: 100%;
  max-width: 35rem;
  padding: 0.5rem 0.5rem;
}

.c13 {
  margin: 0 auto;
  width: 100%;
  max-width: 35rem;
  padding: 0.5rem 0.5rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  overflow: auto;
}

.c4::before,
.c4::after {
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 0.25rem;
  content: '';
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
}

.c4::before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c4::after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c6 {
  margin: 0 auto;
  width: 100%;
  max-width: 35rem;
  padding: 0.5rem 0.5rem 1rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0.75rem;
  border-radius: 0.125rem;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  background: #ffffff;
  width: 100%;
  padding: 0.375rem 0.5rem;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  white-space: normal;
  color: inherit;
}

button.c7 {
  cursor: pointer;
  text-align: left;
}

.c7:last-child {
  margin-bottom: 0;
}

.c9 {
  width: 100%;
  max-width: 66ch;
  line-height: 1.2;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 h1 {
  margin: 2rem 0 1rem;
  line-height: 1.1;
  font-size: 1.5rem;
}

.c9 h2 {
  margin: 1.5rem 0 0.75rem;
  font-size: 1.25rem;
}

.c9 h3,
.c9 p {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 1rem;
}

.c9 h1 + h2 {
  margin-top: -0.75rem;
}

.c9 h1 + p,
.c9 h2 + p {
  margin-top: -0.75rem;
}

.c9 h3 + p {
  margin-top: 0;
}

.c9 > :first-child {
  margin-top: 0;
}

.c9 > :last-child {
  margin-bottom: 0;
}

.c9 dl {
  margin: 1rem 0;
}

.c9 > h3 {
  font-weight: 400;
}

.c11 {
  display: none;
  padding-left: 2rem;
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

@media print {
  .c10 {
    color: black;
  }
}

@media (min-width:768px) {
  .c1 {
    padding: 0.5rem 1rem;
  }
}

@media (min-width:768px) {
  .c13 {
    padding: 0.5rem 1rem;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-right: 1rem;
    padding-left: 1rem;
  }
}

@media (min-width:480px) {
  .c7 {
    padding: 0.75rem 1rem;
  }
}

@media (min-width:480px) {
  .c9 {
    line-height: 1.3;
  }
}

@media (min-width:480px) {
  .c11 {
    display: block;
  }
}

<main
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
      id="audiofocus"
    >
      <h1
        aria-label="Review your ballot selections. Use the down arrow to go through all contests. Use the select button to change a particular contest. When you are done reviewing, use the right arrow to continue."
      >
        Review Your Ballot Selections
      </h1>
      <button
        aria-hidden="true"
        class="c3"
        data-direction="up"
        disabled=""
        type="button"
      >
        ↑ See More
      </button>
    </div>
  </div>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <button
          class="c7 c8"
          id="contest-president"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="President and Vice-President,"
            >
              United States
              , 
              President and Vice-President
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-senator"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Senator,"
            >
              United States
              , 
              Senator
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-representative-district-6"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Representative District 6,"
            >
              United States
              , 
              Representative, District 6
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-governor"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Governor,"
            >
              State of Hamilton
              , 
              Governor
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-lieutenant-governor"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Lieutenant Governor,"
            >
              State of Hamilton
              , 
              Lieutenant Governor
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-secretary-of-state"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Secretary of State,"
            >
              State of Hamilton
              , 
              Secretary of State
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-state-senator-district-31"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Senator District 31,"
            >
              State of Hamilton
              , 
              Senator, District 31
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-state-assembly-district-54"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Assembly Member District 54,"
            >
              State of Hamilton
              , 
              Assembly Member, District 54
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-county-commissioners"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="County Commissioners,"
            >
              Franklin County
              , 
              County Commissioners
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-county-registrar-of-wills"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Registrar of Wills,"
            >
              Franklin County
              , 
              Registrar of Wills
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-city-mayor"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Mayor,"
            >
              City of Springfield
              , 
              Mayor
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-city-council"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="City Council,"
            >
              City of Springfield
              , 
              City Council
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-judicial-robert-demergue"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Retain Robert Demergue as Chief Justice?,"
            >
              Hamilton Court of Appeals
              , 
              Retain Robert Demergue as Chief Justice?
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-judicial-elmer-hull"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Retain Elmer Hull as Associate Justice?,"
            >
              Hamilton Court of Appeals
              , 
              Retain Elmer Hull as Associate Justice?
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-question-a"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Question A: Recovery of Property Damages,"
            >
              State of Hamilton
              , 
              Question A: Recovery of Property Damages
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-question-b"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Question B: Separation of Powers,"
            >
              State of Hamilton
              , 
              Question B: Separation of Powers
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-question-c"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Question C: Limits to Damages for Non-Economic Loss,"
            >
              State of Hamilton
              , 
              Question C: Limits to Damages for Non-Economic Loss
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-proposition-1"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Proposition 1: Gambling in Franklin and Fromwit Counties,"
            >
              State of Hamilton
              , 
              Proposition 1: Gambling in Franklin and Fromwit Counties
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-measure-101"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Measure 101: College District,"
            >
              Franklin County
              , 
              Measure 101: College District
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-102"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Measure 102: Vehicle Abatement Program,"
            >
              Franklin County
              , 
              Measure 102: Vehicle Abatement Program
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-measure-666"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Measure 666: The Question No One Gets To,"
            >
              Franklin County
              , 
              Measure 666: The Question No One Gets To
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
        <button
          class="c7 c8"
          id="contest-primary-constitution-head-of-party"
          role="option"
          type="button"
        >
          <div
            class="c9"
          >
            <h3
              aria-label="Head of Constitution Party,"
            >
              Franklin County
              , 
              Head of Constitution Party
            </h3>
            <p
              aria-label="No selection was made for this contest."
              class="c10"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            aria-label="press enter to change your answer for this contest."
            class="c11"
          >
            <div
              aria-hidden="true"
              class="c12"
            >
              Change
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    class="c13"
  >
    <button
      aria-hidden="true"
      class="c3"
      data-direction="down"
      disabled=""
      type="button"
    >
      ↓ See More
    </button>
  </div>
</main>
`;
